Amend 7901839: Make "safepoints" profiler work on JDK 7 and 8